# nonmax

./: CHANGELOG.md  Cargo.toml  README.md  README.tpl  build.rs
.github/workflows/: ci.yml
src/: lib.rs
src/enum_impl/: mod.rs
