[package]
name = "nonmax"
description = "Numeric types that cannot hold maximum values"
version = "0.5.5"
authors = ["Lucien Greathouse <me@lpghatguy.com>"]
edition = "2018"
documentation = "https://docs.rs/nonmax"
homepage = "https://github.com/LPGhatguy/nonmax"
repository = "https://github.com/LPGhatguy/nonmax"
readme = "README.md"
keywords = ["nonmax", "non-max", "nonzero", "non-zero"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
enum_repr_16 = []
default = ["std"]
std = []

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
bincode = "1.3"
